kubernetes/apps/home-automation/appdaemon/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: appdaemon
spec:
  ingressClassName: nginx
  rules:
  - host: appdaemon.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appdaemon
            port: 
              number: 5050
